--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
         "@mdi/font": "^5.5.55",
         "vue-router": "^3.4.3",
         "vuetify": "^2.3.10"
+    },
+    "engines": {
+        "node": ">= 6.9.4",
+        "npm": ">= 4.4.0"
     }
 }
